--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -4,3 +4,10 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+anyhow = "1.0.89"
+axum = "0.7.7"
+notify = "6.1.1"
+serde = "1.0.210"
+serde_json = "1.0.128"
+tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
+tower-http = { version = "0.6.1", features = ["fs"] }
