--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -7,7 +7,8 @@ edition = "2021"
 anyhow = "1.0.89"
 axum = "0.7.7"
 notify = "6.1.1"
-serde = "1.0.210"
+serde = { version = "1.0.210", features = ["derive"] }
 serde_json = "1.0.128"
 tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
 tower-http = { version = "0.6.1", features = ["fs"] }
+uuid = { version = "1.10.0", features = ["serde"] }
