--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -10,10 +10,12 @@ RUN cargo fetch
 
 RUN cargo build --release
 
+COPY /templates /etc/server/templates 
 
 FROM debian:bookworm-slim
 
 ENV REPO_DIR="/var/server/repo"
+ENV TEMPLATE_DIR="/etc/server/templates"
 
 COPY --from=builder /usr/src/app/target/release/server /usr/local/bin/server
 
