--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.89"
 axum = "0.7.7"
-markdown = "0.3.0"
+markdown = { version = "1.0.0-alpha.21" }
 md-5 = "0.10.6"
 notify = "6.1.1"
 serde = { version = "1.0.210", features = ["derive"] }
